# pca

./: .gitignore  Bezier01  Bsplinesurface.py  CMakeLists.txt  PrimerBspline.py  README.md  SegundoBspline.py  bSplineSurface.py  bSplines.py  blank.yml  cantileverBeam.py  curveRefinements.py  debugScripts.py  exampleRefinement.py  firstBSpline.py  firstNurbs.py  firstNurbsSurface.py  iga2DExample1.py  iga2DExample2.py  iga2DExample3.py  iga_1D.py  linearElastoStaticsSolver.py  nurbs.py  nurbs3d  nurbs_surface  pca_01.py  plateWithHole.py  plottingScripts.py  postprocessor2D.py  preprocessor2D.py  pressureCylinder.py  primerNURBS  refinementExample2.py  refinementExample3.py  refinements.py  surfaceRefinements.py
examples/: CMakeLists.txt  __init__.py  aluminumFin.py  cantileverBeam.py  cantileverBeam_mp.py  cantilever_analytical_solution.py  circularRoof.py  cookMembrane.py  debugExample.py  diffusion_ex1.py  diffusion_ex2.py  diffusion_ex3.py  elasticMembrane.py  example_patch_curves.py  firstBSpline.py  firstMultiPatchSurface.py  firstNurbs.py  firstNurbsSurface.py  hydrogenAtom.py  lShapedBeam.py  lShapedBeam_mp.py  modified_cantilever_beam.py  moreMultiPatchSurface.py  moreNurbsCurves.py  moreNurbsSurfaces.py  plateWithHole.py  plateWithHole_mp.py  plate_with_hole_analytical_solution.py  potentialWell.py  pressureCylinder.py  pressureShellWithCrack_mp.py  rearrange_matrices.py  refinementExample3.py  squareRMPlate.py
examples/diffusion/: CMakeLists.txt  diffusion_ex1.py  diffusion_ex2.py  diffusion_example.f90  diffusion_example_1.f90
examples/geometry/: CMakeLists.txt  exampleRefinement.py  examples_to_refactor.txt  moreMultiPatchSurface.py  moreNurbsCurves.py  multipatch_curve_example.f90  nurbs_curve  nurbs_curve_example.f90  nurbs_curve_example.py  nurbs_curve_example_2.py  nurbs_surface_example.f90  nurbs_surface_example.py  test1_nurbs_curve.sh
examples/misc/: CMakeLists.txt  Theoretical_values.txt  beam_example_1  beam_example_1.f90  debugExample.py  iga1DExample1.py  iga_1D.f90  input_file_cantilever.txt  input_file_curve.txt  read_input_file  read_input_file.f90  read_input_files.py  test1_iga_1D.sh  test_beam_example_1.sh  test_input_file.sh
examples/refinement/: CMakeLists.txt  input_file_curve.txt  input_file_surface.txt  refinementExample2.py  refinementExample4.py  refinement_example_1  refinement_example_1.f90  refinement_example_2  refinement_example_2.f90  refinement_example_3.f90  refinement_example_4  refinement_example_4.f90  refinement_example_5.f90  refinement_example_6.f90  refinement_example_7.f90  refinement_example_8.f90  refinement_example_9.f90  surface_refinement_example.f90  test_refn_1.sh  test_refn_2.sh  test_refn_3.sh  test_refn_4.sh
examples/schrodinger/: hydrogenAtom.py
examples/solid_mechanics/: cantileverBeam.py  cantileverBeam_mp.py  cantilever_analytical_solution.py  circularRoof.py  lShapedBeam.py  pressureCylinderWithCrack.py
src/: CMakeLists.txt  basisFunctions.py  codeVault.py  curveRefinements.py  debugScripts.py  diffusionSolver.py  linearElastoStaticsSolver.py  matrixEquationSolver.py  multipatchPostprocessor2D.py  multipatchPreprocessor2D.py  numerical_model.py  nurbs.py  pca_01.py  plottingScripts.py  postprocessor2D.py  postprocessorPlate.py  preprocessor2D.py  preprocessorPlate.py  schrodingerEquationSolver.py  surfaceRefinements.py  timeIntegration.py  waveEquationSolver.py
src/fortran_vault_codes/: der_basis_functions.f90  find_span.f90  one_basis_function.f90  test_fortran_scripts_v2.f90
src/multipatch/: multipatch_nurbs.py
src/phenomenon/: CMakeLists.txt  diffusion_solver.f90  euler_bernoulli_beam.mod  isogeometric_beam_1D.f90  isogeometric_beam_1d.mod  linearElastoStaticsSolver.py  reference_solutions.mod  timoshenko_beam.f90
src/plotting/: nurbs_plotter.py  plottingScripts.py
src/postprocessor/: new_postprocessor.py  postprocessorPlate.py
src_fortran/: CMakeLists.txt  numerical_model.py
src_fortran/preprocessor/: CMakeLists.txt  isogeom_preprocessor.f90
src_python/: boundary_points_input_file_diffusion_4.txt  control_points_input_file_diffusion_4.txt  dirichlet_points_input_file_diffusion_4.txt  postprocessing_plotter.py  preprocessing_plotter.py
(+62 files in other folders)
