add_executable(diffusion_example diffusion_example.f90)
find_package(LAPACK)
target_include_directories(diffusion_example PUBLIC $<TARGET_PROPERTY:spline_mod,Fortran_MODULE_DIRECTORY>)
target_include_directories(diffusion_example PUBLIC $<TARGET_PROPERTY:solver_mod,Fortran_MODULE_DIRECTORY>)
target_link_libraries(diffusion_example PRIVATE spline_mod solver_mod LAPACK::LAPACK)